- implemented sorted by position field when retrieve all languages - apllied logs to serviceImpl class